# vssh

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HELP.md  Makefile  NOTICE  README.ko.md  README.md  SECURITY.md  go.mod  go.sum  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml  codeql.yml  pages.yml  release.yml  scorecard.yml  security.yml
cmd/vssh/: classify_fuzz_test.go  commands_config.go  commands_config_test.go  commands_diff.go  commands_discover.go  commands_exec.go  commands_fleetstate.go  commands_fleetstate_live_test.go  commands_fleetstate_test.go  commands_health.go  commands_intent.go  commands_keys.go  commands_mcpinstall.go  commands_rpc.go  (+28 more)
docs/: AI_RUNTIME.md  KEY_ROTATION.md  MANUAL.ko.md  MANUAL.md  MCP_TOOLSET.md  PEER_DISCOVERY.ko.md  PEER_DISCOVERY.md  PYTHON_SDK.ko.md  PYTHON_SDK.md  README.md  ROADMAP.md  SECURITY_AUDIT_PACKAGE.md  SECURITY_AUDIT_RFP.md  SECURITY_TRANSPORT_MIGRATION.md  SESSION_TODO.md  WHY_VSSH.ko.md  WHY_VSSH.md  demo.cast  record-demo.sh
examples/: README.md  fleet.sample.json  memory.sample.json  nvidia-smi.result.json  workflow.sample.yaml
policies/: README.md  backup.json  ci.json  deploy.json  readonly.json
scripts/: audit_transport_scan.sh  authorize_fleet.sh  build_node_registry.sh  cross_authorize_fleet.sh  deploy_fleet.sh  enable_require_tls.sh  enroll.sh  install_fleet_state_refresh.sh  pin_fleet_keys.sh  refresh_fleet_state.sh  replicate_fleet_state.sh  rotate_authorized_key.sh
site/: index.html
test/: agent_suite.sh
tests/: test_python_sdk.py
(+79 files in other folders)
