[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "vssh"
dynamic = ["version"]
description = "vssh — AI-native, drop-in ssh replacement (CLI binary + Python SDK)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "zeus" }]
keywords = ["vssh", "ssh", "remote-execution", "mcp", "ai-agents", "tailscale"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/zeus-kim/vssh"
Repository = "https://github.com/zeus-kim/vssh"

[project.scripts]
vssh = "vssh._cli:main"

[tool.hatch.version]
path = "src/vssh/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/vssh"]
